upd width and add dots

--- a/src/partials/products.html
+++ b/src/partials/products.html
@@ -6,6 +6,7 @@
             <li class="products-item ice-cream">
                 <div class="img-ice-cream"></div>
                 <h3 class="products-title">ice cream</h3>
+                <!-- <span class="dots">. . .</span> -->
                 <p class="products-description">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod
                     tempor incididunt ut labore et. dolore magna
                     aliqua facilisis.</p>
