--- a/src/sass/layout/_products.scss
+++ b/src/sass/layout/_products.scss
@@ -29,8 +29,10 @@
   flex-wrap: wrap;
   justify-content: center;
   border-radius: 24px;
-  width: 100%;
+  max-width: 280px;
   margin-bottom: 130px;
+  margin-left: auto;
+  margin-right: auto;
 }
 .products-item:last-child {
   margin-bottom: 0;
@@ -58,13 +60,18 @@
   text-transform: uppercase;
   color: $text-color-hero;
   padding-top: 160px;
+  padding-bottom: 66px;
+  position: relative;
 }
 .products-title::after {
   content: '. . .';
-  display: flex;
+  position: absolute;
+  // display: flex;
   width: 6px;
   height: 6px;
-  text-align: center;
+  top: 85%;
+  left: 80%;
+  transform: rotate(90deg);
 }
 .products-description {
   font-family: DM Sans;
@@ -137,6 +144,7 @@
     align-items: baseline;
     width: 220px;
     margin-bottom: 0;
+    margin-left: 0;
     margin-right: 20px;
   }
   .products-item:last-child {
@@ -158,5 +166,8 @@
   }
   .btn-circle {
     margin-bottom: 50px;
+  }
+  .products-title {
+    font-size: 30px;
   }
 }
