--- a/src/sass/components/_outlets.scss
+++ b/src/sass/components/_outlets.scss
@@ -1,36 +1,35 @@
-.outlets-main {
+.outlets {
   background-color: $second-bg-color;
-}
-.outlets .content-container {
-  position: relative;
-  height: 1291px;
 
-  @media screen and (min-width: 768px) {
-    height: 544px;
-  }
+  .content-container {
+    position: relative;
+    height: 1291px;
 
-  @media screen and (min-width: 1280px) {
-    height: 556px;
+    @media screen and (min-width: 768px) {
+      height: 544px;
+    }
+
+    @media screen and (min-width: 1280px) {
+      height: 556px;
+    }
   }
 }
+
 .outlets-list {
   position: absolute;
   left: 50px;
   right: 50px;
-  top: -84px;
+  top: -78px;
 
   @media screen and (min-width: 768px) {
     display: flex;
-    flex-wrap: wrap;
-    margin-left: -10px;
-    margin-top: -10px;
   }
 
   @media screen and (min-width: 1280px) {
-    margin-left: -15px;
-    margin-top: -15px;
+    top: -102px;
   }
 }
+
 .outlets-item {
   width: 100%;
   height: 427px;
@@ -40,20 +39,34 @@
   box-shadow: 0px 8px 30px rgba(212, 20, 67, 0.1);
   border-radius: 24px;
 
-  @media screen and (min-width: 768px) {
-    flex-basis: calc((100% - 6 * 10px) / 3);
-    margin: 10px;
-    height: 544px;
+  @media screen and (min-width: 768px) and (max-width: 1279px) {
+    display: block;
+    margin-bottom: 0;
+    max-width: 220px;
+    min-height: 544px;
     padding: 50px 31px;
   }
 
+  @media screen and (min-width: 768px) {
+    &:not(:last-child) {
+      margin-right: 20px;
+      margin-bottom: 0;
+    }
+  }
+
   @media screen and (min-width: 1280px) {
-    flex-basis: calc((100% - 6 * 15px) / 3);
-    margin: 15px;
-    height: 572px;
+    max-width: 330px;
+    min-height: 572px;
     padding: 51px 44px 62px 43px;
   }
+
+  @media screen and (min-width: 1280px) {
+    &:not(:last-child) {
+      margin-right: 31px;
+    }
+  }
 }
+
 .subtitle {
   width: 80px;
   margin-bottom: 25px;
@@ -77,8 +90,11 @@
 
   @media screen and (min-width: 1280px) {
     margin-bottom: 32px;
+    font-size: 16px;
+    line-height: 1.9;
   }
 }
+
 .subtitle-food {
   width: 130px;
   margin-bottom: 25px;
@@ -117,13 +133,13 @@
   @media screen and (min-width: 768px) {
     margin-bottom: 14px;
     font-size: 14px;
-    line-height: 1.83;
+    line-height: 1.86;
   }
 
   @media screen and (min-width: 1280px) {
     margin-bottom: 10px;
     font-size: 16px;
-    line-height: 1.86;
+    line-height: 1.9;
   }
 }
 .outlets-text {
@@ -148,7 +164,7 @@
     padding-bottom: 32px;
     margin-bottom: 32px;
     font-size: 16px;
-    line-height: 1.83;
+    line-height: 1.8;
   }
 }
 .timetable-title {
@@ -166,7 +182,7 @@
 
   @media screen and (min-width: 1280px) {
     font-size: 16px;
-    line-height: 1.86;
+    line-height: 1.9;
   }
 }
 .timetable-list {
@@ -178,7 +194,7 @@
   }
 
   @media screen and (min-width: 1280px) {
-    padding-bottom: 32px;
+    padding-bottom: 0;
   }
 }
 .timetable-desc {
@@ -196,7 +212,7 @@
 
   @media screen and (min-width: 1280px) {
     font-size: 16px;
-    line-height: 1.86;
+    line-height: 1.9;
   }
 }
 .outlets-contacts {
@@ -220,11 +236,11 @@
 
   @media screen and (min-width: 768px) {
     font-size: 14px;
-    line-height: 1.83;
+    line-height: 1.86;
   }
 
   @media screen and (min-width: 1280px) {
     font-size: 16px;
-    line-height: 1.83;
+    line-height: 1.8;
   }
 }
