виправляє помилки в коді

--- a/src/sass/layout/_recall.scss
+++ b/src/sass/layout/_recall.scss
@@ -1,6 +1,6 @@
 .section_slider {
     background-color: $text-color-hero;
-    width: 100%;
+    // width: 100%;
     padding-top: 155px;
 
     @media screen and (min-width: 768px) {
