вносит изменения в паддинги и марджини

--- a/src/sass/layouts/_section-howitsmade.scss
+++ b/src/sass/layouts/_section-howitsmade.scss
@@ -1,12 +1,12 @@
 .howitsmade {
   padding-top: 125px;
-  padding-bottom: 39px;
   background-color: $section-background;
 }
 
 .container-howitsmade {
   width: auto;
   display: block;
+  padding-bottom: 39px;
 
   @include for-size(tablet) {
     padding-bottom: 66px;
@@ -86,6 +86,7 @@
     width: 516px;
     margin-top: 55px;
     margin-right: 74px;
+    margin-bottom: 0;
   }
 }
 
@@ -114,6 +115,7 @@
     background-image: url('../images//desktop_background_milk_1x.png');
     background-repeat: no-repeat;
     background-size: contain;
+    background-position: 50% 300%;
   }
 }
 
@@ -164,6 +166,7 @@
   align-items: center;
   justify-content: center;
   margin-top: 20px;
+
   width: 160px;
   height: 44px;
 
@@ -191,14 +194,15 @@
   align-items: center;
   vertical-align: middle;
   margin-left: 13.6px;
+  width: 4.5px;
+  height: 8px;
 }
-.howtsmade-images {
-  @include for-size(mobile-only) {
-    position: absolute;
-    padding-top: 460px;
-  }
 
-  @include for-size(tablet) {
-    display: none;
+@include for-size(mobile-only) {
+  .howitsmade-title-container {
+    width: 100%;
+    max-width: 220px;
+    margin-left: auto;
+    margin-right: auto;
   }
 }
