--- a/src/sass/main.css
+++ b/src/sass/main.css
@@ -559,13 +559,13 @@ a {
 
 .howitsmade {
   padding-top: 125px;
-  padding-bottom: 39px;
   background-color: #fff5f6;
 }
 
 .container-howitsmade {
   width: auto;
   display: block;
+  padding-bottom: 39px;
 }
 
 @media (min-width: 740px) {
@@ -663,6 +663,7 @@ a {
     width: 516px;
     margin-top: 55px;
     margin-right: 74px;
+    margin-bottom: 0;
   }
 }
 
@@ -701,6 +702,7 @@ a {
     background-image: url("../images//desktop_background_milk_1x.png");
     background-repeat: no-repeat;
     background-size: contain;
+    background-position: 50% 300%;
   }
 }
 
@@ -791,18 +793,16 @@ a {
           align-items: center;
   vertical-align: middle;
   margin-left: 13.6px;
+  width: 4.5px;
+  height: 8px;
 }
 
 @media (max-width: 739px) {
-  .howtsmade-images {
-    position: absolute;
-    padding-top: 460px;
-  }
-}
-
-@media (min-width: 740px) {
-  .howtsmade-images {
-    display: none;
+  .howitsmade-title-container {
+    width: 100%;
+    max-width: 220px;
+    margin-left: auto;
+    margin-right: auto;
   }
 }
 
