разметку на 320пыкс майже ready

--- a/src/sass/_slider.scss
+++ b/src/sass/_slider.scss
@@ -1,6 +1,6 @@
 .slider-section {
   padding-top: 80px;
-  background-color: rgb(220, 209, 98);
+  background-color: $main-color;
 }
 
 .slider-list {
@@ -15,10 +15,22 @@
     justify-content: center;
     align-items: center;
     content: '';
-    height: 120px;
+    height: 85px;
     border-radius: 4px;
     border: 1px solid transparent;
     margin-bottom: 29px;
+    background-repeat: no-repeat;
+    background-position: center;
+  }
+  &::after {
+    display: inline-flex;
+    width: 100%;
+    justify-content: center;
+    align-items: center;
+    content: '';
+    height: 12px;
+    margin-top: 30px;
+    margin-bottom: 86px;
     background-repeat: no-repeat;
     background-position: center;
   }
@@ -33,6 +45,16 @@
 }
 
 .slider-list-text {
-  color: tomato;
-  font-style: 34px;
+  color: rgba(0, 0, 0, 1);
+  font-size: 12px;
+  line-height: 2.55;
+  text-align: center;
+  background-color: #fafafa;
+  padding: 43px 66px 26px 57px;
+}
+
+.slider-list-under {
+  color: rgba(0, 0, 0, 1);
+  text-align: center;
+  margin-top: 52px;
 }
