додає стилі для тексту героя

--- a/src/partials/neader-hero.html
+++ b/src/partials/neader-hero.html
@@ -51,46 +51,58 @@
                         </ul>
                     </div>
                 </nav>
-                
             </header>
 
-            <!-- ЗАГОЛОВОК -->
-            <div>
-                <h1 class="title-H1">ice cream made with     
-                    <span>passion</span>
-                </h1>
-                <button class="btn">Products</button>
-                <button class="btn2">How it’s made?</button>
-            </div>
+            <!--ГЕРОЙ-->
+            <section class="hero">
+                     
+                <div class="left-block">
+                    <!-- ЗАГОЛОВОК -->
+                    <div class="title-block">
+                        <h1 class="hero-title">ice cream <br> made with<br>     
+                            <span class="hero-title--accent">passion</span>
+                        </h1>
+                        <div class="hero-btn-block">
+                            <button class="btn">Products</button>
+                            <button class="btn2">How it’s made?</button>
+                        </div>
+                        
+                    </div>
 
-            <!-- ВІО ЕКО -->
-            <div>
-                <p>
-                    Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et 
-                </p>
-                <button class="btn-circle">
-                  <p>&#8594;</p>  
-                </button>
-            </div>
+                    <!-- ВІО ЕКО -->
+                    <div class="bio-eco">
+                        <p class="bio-eco-descr">
+                            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et 
+                        </p>
+                        <button class="btn-circle">
+                            <svg class="arrow-icon">
+                                <use href="././images/icons/sprite.svg#arrow-icon" width="9px"></use>
+                            </svg>
+                        </button>
+                    </div>
+                </div>
 
-            <!-- ТОЧКИ ПРОДАЖУ -->
-            <div>
-                <div>
-                    <p>16<span>cafes</span></p> 
-                </div>
-                <div>
-                   <p>23<span>food trucks</span></p>
-                </div>
-            </div>
-            <picture class="milk">
-                <source srcset="././images/hero/milk_tablet.jpg 1x, ././images/hero/milk_tablet@2x.jpg 2x" media="(max-width: 1199px)"/>
-                <source srcset="././images/hero/milk_desktop.jpg 1x, ././images/hero/milk_desktop@2x.jpg 2x"  media="(min-width: 1200px)"/>
-                <img
-                  src="././images/section1/img11-tablet.jpg"
-                  alt="bottle with milk"
-                />  
-            </picture>
-            
+                
+                
+                <!-- ТОЧКИ ПРОДАЖУ -->
+                <ul class="sales-points-list">
+                    <li class="points">
+                        <p class="points-number">16</p><p class="points-title">cafes</p>                        
+                    </li>
+                    <li class="points">
+                        <p class="points-number">23</p><p class="points-title">food trucks</p>                        
+                    </li>
+                </ul>
+                <!--<picture class="milk">
+                    <source srcset="././images/hero/milk_tablet.png 1x, ././images/hero/milk_tablet@2x.png 2x" media="(max-width: 1199px)"/>
+                    <source srcset="././images/hero/milk_desktop.png 1x, ././images/hero/milk_desktop@2x.png 2x"  media="(min-width: 1200px)"/>
+                    <img
+                    src="././images/hero/milk_tablet.png"
+                    alt="bottle with milk"
+                    />    
+                </picture>-->
+            </section>
+        
 
 </section>
 <script src="../menu.js"></script>
