--- a/src/sass/main.css
+++ b/src/sass/main.css
@@ -184,8 +184,8 @@ img {
   font-family: inherit;
   font-style: normal;
   font-weight: normal;
-  font-size: 14px;
-  line-height: 1.2;
+  /*font-size: 14px;
+  line-height: 1.2;*/
   -webkit-transition-duration: 350ms;
           transition-duration: 350ms;
   -webkit-transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
@@ -206,6 +206,7 @@ img {
 
 .head-container {
   position: relative;
+  padding-left: 20px;
   height: 502px;
   background-color: #FFB8CA;
 }
@@ -433,6 +434,257 @@ img {
 @media screen and (min-width: 1210px) {
   .nav-item:not(:last-child) {
     margin-right: 35px;
+  }
+}
+
+.hero {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+}
+
+@media screen and (min-width: 768px) {
+  .hero {
+    padding-top: 3px;
+  }
+}
+
+.title-block {
+  margin-top: 137px;
+}
+
+@media screen and (min-width: 768px) and (max-width: 1199px) {
+  .title-block {
+    margin-top: 12px;
+  }
+}
+
+@media screen and (min-width: 1200px) {
+  .title-block {
+    margin-top: 12px;
+  }
+}
+
+.hero-title {
+  font-family: Titan One;
+  font-size: 26px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 1.1538;
+  letter-spacing: 0.04em;
+  text-transform: uppercase;
+  color: #FFFFFF;
+}
+
+.hero-title--accent {
+  color: #D41443;
+  font-size: 48px;
+  line-height: 0.955;
+}
+
+@media screen and (min-width: 768px) {
+  .hero-title--accent {
+    font-size: 34px;
+    line-height: 0.905;
+  }
+}
+
+@media screen and (min-width: 1200px) {
+  .hero-title--accent {
+    font-size: 58px;
+  }
+}
+
+@media screen and (min-width: 768px) {
+  .hero-title {
+    font-size: 22px;
+    line-height: 1.1363;
+  }
+}
+
+@media screen and (min-width: 1200px) {
+  .hero-title {
+    font-size: 38px;
+    line-height: 1.145;
+  }
+}
+
+.hero-btn-block {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  margin-top: 19px;
+}
+
+@media screen and (min-width: 768px) {
+  .hero-btn-block {
+    margin-top: 20px;
+  }
+}
+
+@media screen and (min-width: 1200px) {
+  .hero-btn-block {
+    margin-top: 25px;
+  }
+}
+
+.hero-btn-block .btn {
+  margin: 0;
+  margin-right: 9.2px;
+  width: 61.2px;
+  height: 24px;
+  font-family: DM Sans;
+  font-size: 8px;
+  line-height: 1,25;
+}
+
+@media screen and (min-width: 1200px) {
+  .hero-btn-block .btn {
+    margin-right: 15px;
+    width: 102px;
+    height: 40px;
+    font-size: 14px;
+    line-height: 1,2857;
+  }
+}
+
+.hero-btn-block .btn2 {
+  width: 82.8x;
+  height: 24px;
+  border: transparent;
+  font-family: DM Sans;
+  font-size: 8px;
+  line-height: 1,25;
+}
+
+@media screen and (min-width: 1200px) {
+  .hero-btn-block .btn2 {
+    width: 138px;
+    height: 40px;
+    font-size: 14px;
+    line-height: 1,2857;
+  }
+}
+
+.bio-eco {
+  display: none;
+}
+
+@media screen and (min-width: 768px) {
+  .bio-eco {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+  }
+}
+
+.bio-eco .btn-circle {
+  padding: 0;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  width: 18px;
+  height: 18px;
+  border: none;
+}
+
+.bio-eco-descr {
+  display: inline-block;
+  width: 120px;
+  padding: 0;
+  margin: 0;
+  margin-top: 47px;
+  margin-bottom: 7px;
+  font-family: DM Sans;
+  font-weight: 400;
+  font-size: 8px;
+  line-height: 1.5;
+  color: #FFFFFF;
+}
+
+.arrow-icon {
+  fill: #D41443;
+  width: 9px;
+}
+
+.sales-points-list {
+  display: none;
+}
+
+@media screen and (min-width: 768px) {
+  .sales-points-list {
+    display: block;
+    margin-right: 19px;
+  }
+}
+
+@media screen and (min-width: 1200px) {
+  .sales-points-list {
+    margin-top: 78px;
+    margin-right: 100px;
+  }
+}
+
+.points:not(:last-child) {
+  margin-bottom: 14px;
+}
+
+@media screen and (min-width: 1200px) {
+  .points:not(:last-child) {
+    margin-bottom: 30px;
+  }
+}
+
+.points {
+  width: 51px;
+  height: 43px;
+  /*display: flex;
+    justify-content: center;
+    flex-direction: column;*/
+}
+
+.points-number {
+  margin: 0;
+  font-family: Titan One;
+  font-size: 28px;
+  line-height: 1.1428;
+  text-align: right;
+  letter-spacing: 0.04em;
+  text-transform: uppercase;
+  color: #D41443;
+}
+
+@media screen and (min-width: 1200px) {
+  .points-number {
+    font-size: 46px;
+    line-height: 1.1521;
+  }
+}
+
+.points-title {
+  margin: 0;
+  font-family: DM Sans;
+  font-size: 8px;
+  line-height: 1.25;
+  text-align: right;
+  color: #FFFFFF;
+}
+
+@media screen and (min-width: 1200px) {
+  .points-title {
+    margin-top: 2px;
+    font-size: 14px;
+    line-height: 1.2857;
   }
 }
 /*# sourceMappingURL=main.css.map */
