--- a/src/sass/components/_btn.scss
+++ b/src/sass/components/_btn.scss
@@ -93,8 +93,8 @@
   font-family: inherit;
   font-style: normal;
   font-weight: normal;
-  font-size: 14px;
-  line-height: 1.2;
+  /*font-size: 14px;
+  line-height: 1.2;*/
 
   transition-duration: 350ms;
   transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
