Доделывает десктоп торговых точек

--- a/src/sass/components/_outlets.scss
+++ b/src/sass/components/_outlets.scss
@@ -11,6 +11,17 @@
 
     @media screen and (min-width: 1280px) {
       height: 556px;
+      background-image: url(../images/3-desktop/outlets-bg.png);
+      background-size: contain;
+      background-repeat: no-repeat;
+
+      @media screen and (min-device-pixel-ratio: 2),
+      screen and (-webkit-min-device-pixel-ratio: 2),
+      screen and (-o-min-device-pixel-ratio: 2/1),
+      screen and (min-resolution: 192dpi),
+      screen and (min-resolution: 2dppx) {
+        background-image: url(../images/3-desktop/outlets-bg@2x.png);
+      }
     }
   }
 }
@@ -26,6 +37,7 @@
   }
 
   @media screen and (min-width: 1280px) {
+    justify-content: center;
     top: -102px;
   }
 }
@@ -194,7 +206,7 @@
   }
 
   @media screen and (min-width: 1280px) {
-    padding-bottom: 0;
+    padding-bottom: 32;
   }
 }
 .timetable-desc {
