--- a/src/partials/how_its_made.html
+++ b/src/partials/how_its_made.html
@@ -38,7 +38,7 @@
 
                 <a class="howitsmade-link">Read more
                     <svg class="howitsmade-icon" width="4.5px" height="8px">
-                        <use xlink:href="./images/icons/sprite.svg#icon-Vector-1"></use>
+                        <use xlink:href="./images/icons/sprite.svg#vector"></use>
                     </svg>
                 </a>
             </div>
