додає стилі для десктопу

--- a/src/sass/layout/_hero.scss
+++ b/src/sass/layout/_hero.scss
@@ -18,11 +18,13 @@
     }
 
     @media screen  and (min-width:1200px){
-        margin-top: 12px;
+        margin-top: 84px;
     }
 }
 
 .hero-title {
+    margin: 0;
+    padding: 0;
     font-family: Titan One;
 
     font-size: 26px;
@@ -120,8 +122,11 @@
         display: flex;  
         flex-direction: column;    
     }
-   
+    @media screen  and (min-width:1200px){
+        margin-top: 54px;
+    }
 }
+
 
 .bio-eco .btn-circle {
     padding:0;
@@ -132,6 +137,11 @@
     height: 18px;
 
     border: none;
+
+    @media screen  and (min-width:1200px){
+        width: 26px;
+        height: 26px;
+    }
 
 }
 
@@ -150,6 +160,14 @@
     font-size: 8px;    
     line-height: 1.5;
     color: $text-color-hero;
+
+    @media screen  and (min-width:1200px){
+        margin-bottom: 20px;
+        width: 200px;
+
+        font-size: 14px;    
+        line-height: 1.4;
+    }
 }
 
 .arrow-icon {
@@ -158,6 +176,12 @@
     fill: $title-text-color;
 
     width: 9px;
+
+    @media screen  and (min-width:1200px){
+        width: 13px;
+    }
+
+
 }
 
 .sales-points-list {
