--- a/src/sass/layout/_menu.scss
+++ b/src/sass/layout/_menu.scss
@@ -9,6 +9,10 @@
     @media screen  and (min-width:768px){
         padding-top: 37px;
     }
+
+    @media screen  and (min-width:1200px){
+        height: 665px;
+}
 }
 
 .btn-container {
