--- a/src/sass/main.css
+++ b/src/sass/main.css
@@ -217,6 +217,12 @@ img {
   }
 }
 
+@media screen and (min-width: 1200px) {
+  .head-container {
+    height: 665px;
+  }
+}
+
 .btn-container {
   display: -webkit-box;
   display: -ms-flexbox;
@@ -464,11 +470,13 @@ img {
 
 @media screen and (min-width: 1200px) {
   .title-block {
-    margin-top: 12px;
+    margin-top: 84px;
   }
 }
 
 .hero-title {
+  margin: 0;
+  padding: 0;
   font-family: Titan One;
   font-size: 26px;
   font-style: normal;
@@ -585,6 +593,12 @@ img {
   }
 }
 
+@media screen and (min-width: 1200px) {
+  .bio-eco {
+    margin-top: 54px;
+  }
+}
+
 .bio-eco .btn-circle {
   padding: 0;
   display: -webkit-box;
@@ -596,6 +610,13 @@ img {
   width: 18px;
   height: 18px;
   border: none;
+}
+
+@media screen and (min-width: 1200px) {
+  .bio-eco .btn-circle {
+    width: 26px;
+    height: 26px;
+  }
 }
 
 .bio-eco-descr {
@@ -612,9 +633,24 @@ img {
   color: #FFFFFF;
 }
 
+@media screen and (min-width: 1200px) {
+  .bio-eco-descr {
+    margin-bottom: 20px;
+    width: 200px;
+    font-size: 14px;
+    line-height: 1.4;
+  }
+}
+
 .arrow-icon {
   fill: #D41443;
   width: 9px;
+}
+
+@media screen and (min-width: 1200px) {
+  .arrow-icon {
+    width: 13px;
+  }
 }
 
 .sales-points-list {
