додаэ нижны паддінги

--- a/src/sass/layout/_recall.scss
+++ b/src/sass/layout/_recall.scss
@@ -2,13 +2,16 @@
     background-color: $text-color-hero;
     // width: 100%;
     padding-top: 155px;
+    padding-bottom: 86px;
 
     @media screen and (min-width: 768px) {
         padding-top: 278px;
+        padding-bottom: 119px;
         
     }
     @media screen and (min-width: 1280px) {
         padding-top: 382px;
+        padding-bottom: 132px;
     }
     }
     
