--- a/src/partials/products.html
+++ b/src/partials/products.html
@@ -1,3 +1,60 @@
+<!DOCTYPE html>
+<html lang="ru">
+
+<head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Ice Cream</title>
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=DM+Sans:wght@400;500;700&family=Titan+One&display=swap"
+        rel="stylesheet">
+    <link rel="stylesheet"
+        href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/1.0.0/modern-normalize.min.css" />
+
+</head>
 <section class="product-container">
-    <h1>Hello</h1>
+    <div>
+        <h2 class="product-h2">100% natural</h2>
+        <h1>products</h1>
+        <ul>
+            <li>
+                <img class="produck-image" src="./images/product-icecream.png" alt="">
+                <h2 class="product-h2">ice cream</h2>
+                <p>
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Maiores, ratione vel assumenda similique voluptates qui perferendis atque praesentium mollitia officiis modi incidunt adipisci harum sapiente est dicta tempora iste at?
+                </p>
+                <a href="">
+                    <svg class="produck-image">
+                        <use href="./images/svg/sprite.svg#icon-arrow-right2"></use>
+                    </svg>
+                </a>
+            </li>
+            <li>
+                <img class="produck-image" src="./images/product-icecoffee.png" alt="">
+                <h2 class="product-h2">ice coffee</h2>
+                <p>
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Maiores, ratione vel assumenda similique voluptates qui
+                    perferendis atque praesentium mollitia officiis modi incidunt adipisci harum sapiente est dicta tempora iste at?
+                </p>
+                <a href="">
+                    <svg class="produck-image">
+                        <use href="./images/svg/sprite.svg#icon-arrow-right2"></use>
+                    </svg>
+                </a>
+            </li>
+            <li>
+                <img class="produck-image" src="./images/product-milkshake.png" alt="">
+                <h2 class="product-h2">milkshakes</h2>
+                <p>
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Maiores, ratione vel assumenda similique voluptates qui
+                    perferendis atque praesentium mollitia officiis modi incidunt adipisci harum sapiente est dicta tempora iste at?
+                </p>
+                <a href="">
+                    <svg class="produck-image">
+                        <use href="./images/svg/sprite.svg#icon-arrow-right2"></use>
+                    </svg>
+                </a>
+            </li>
+        </ul>
+    </div>
 </section>
