--- a/src/sass/_products.scss
+++ b/src/sass/_products.scss
@@ -1,4 +1,21 @@
 .product-container {
   margin: 0;
   padding: 0;
+  height: auto;
+}
+
+.product-h2 {
+  font-family: Titan One sans-serif;
+  font-style: normal;
+  font-weight: normal;
+  font-size: 30px;
+  line-height: 1.13;
+  text-align: center;
+  letter-spacing: 0.04em;
+  text-transform: uppercase;
+}
+
+.produck-image {
+  width: 40px;
+  height: 40px;
 }
