--- a/src/sass/main.css
+++ b/src/sass/main.css
@@ -102,15 +102,73 @@ li {
   position: relative;
 }
 
+.hero {
+  color: black;
+}
+
 .product-container {
   margin: 0;
   padding: 0;
+  height: auto;
+}
+
+.product-h2 {
+  font-family: Titan One;
+  font-style: normal;
+  font-weight: normal;
+  font-size: 30px;
+  line-height: 1.13;
+  text-align: center;
+  letter-spacing: 0.04em;
+  text-transform: uppercase;
+}
+
+.manufacture-container {
+  margin: 0 auto;
+  width: 100%;
+}
+
+@media screen and (min-width: 320px) {
+  .manufacture-container {
+    max-width: 320px;
+    padding-left: 20px;
+    padding-right: 20px;
+  }
+}
+
+@media screen and (min-width: 480px) {
+  .manufacture-container {
+    width: 480px;
+  }
+}
+
+@media screen and (min-width: 768px) {
+  .manufacture-container {
+    width: 768px;
+    padding-left: 35px;
+    padding-right: 35px;
+  }
+}
+
+@media screen and (min-width: 1200px) {
+  .manufacture-container {
+    position: relative;
+    width: 1200px;
+    padding-left: 75px;
+    padding-right: 75px;
+  }
 }
 
 .manufacture {
   background-color: #fff5f6;
   padding-top: 125px;
-  padding-bottom: 100px;
+  padding-bottom: 97px;
+}
+
+@media screen and (max-width: 767px) {
+  .manufacture {
+    letter-spacing: 0;
+  }
 }
 
 @media screen and (min-width: 768px) {
@@ -126,13 +184,18 @@ li {
   }
 }
 
+.manufacture-main-text {
+  margin-right: 41px;
+  margin-left: 39px;
+}
+
 .manufacture-title {
   padding-bottom: 15px;
   font-family: Titan One;
   font-style: normal;
   font-weight: 400;
   font-size: 18px;
-  line-height: 1.16;
+  line-height: 1.145;
   text-align: center;
   text-transform: uppercase;
   color: #ffa5ba;
@@ -154,7 +217,7 @@ li {
   letter-spacing: 0.04em;
   text-transform: uppercase;
   color: #d41443;
-  padding-right: 15px;
+  margin-bottom: 26px;
 }
 
 @media screen and (min-width: 768px) {
@@ -164,28 +227,45 @@ li {
 }
 
 @media screen and (min-width: 768px) {
-  .cont-box {
+  .mnf-box {
     display: -webkit-box;
     display: -ms-flexbox;
     display: flex;
   }
 }
 
+.mnf-box {
+  margin-bottom: 39px;
+}
+
 .manufacture-box {
-  padding-left: 15px;
-  padding-right: 15px;
-  margin-bottom: 45px;
+  width: 280px;
+  height: 100%;
+  margin-bottom: 46px;
+}
+
+.manufacture-bg {
+  padding-left: 30px;
+  padding-right: 30px;
+}
+
+@media screen and (max-width: 767px) {
+  .manufacture-bg {
+    background-image: url("/images/mobile/how-its-made-milk.png");
+    background-repeat: no-repeat;
+    background-position-y: bottom;
+    background-size: contain;
+  }
 }
 
 .manufacture-text {
   margin-bottom: 45px;
-  padding-left: 50px;
-  padding-right: 50px;
   font-family: DM Sans;
   font-style: normal;
   font-weight: 500;
   font-size: 12px;
-  line-height: 1.58;
+  line-height: 1.62;
+  letter-spacing: 0;
   color: #000000;
 }
 
@@ -195,10 +275,9 @@ li {
   }
 }
 
-.manufacture-subtext {
-  margin-bottom: 18px;
-  padding-left: 50px;
-  padding-right: 50px;
+.manufacture-subtext,
+.manufacture-subtext-second {
+  margin-bottom: 8px;
   font-family: DM Sans;
   font-style: normal;
   font-weight: 500;
@@ -208,27 +287,31 @@ li {
 }
 
 @media screen and (min-width: 768px) {
-  .manufacture-subtext {
+  .manufacture-subtext,
+  .manufacture-subtext-second {
     font-size: 14px;
   }
 }
 
-@media screen and (max-width: 767px) {
-  .bg {
-    background-image: url("/images/mobile/manufacture-milk.png");
-    background-repeat: no-repeat;
-  }
+.manufacture-subtext-second {
+  margin-bottom: 17px;
 }
 
-.bottom-manufacture {
-  margin-left: 50px;
+.button-manufacture {
+  display: -webkit-inline-box;
+  display: -ms-inline-flexbox;
+  display: inline-flex;
+  margin-left: 30px;
+  margin-right: 74px;
   width: 176px;
+  padding-left: 37px;
+  padding-right: 38px;
   height: 44px;
   font-family: DM Sans;
   font-style: normal;
   font-weight: 700;
   font-size: 14px;
-  line-height: 1.28;
+  line-height: 1.302;
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
@@ -236,21 +319,32 @@ li {
   color: #d41443;
   background: #fff;
   border-radius: 22px;
+  border-color: transparent;
 }
 
-.bottom-manufacture:hover {
+.button-manufacture::after {
+  content: '';
+  display: inline-block;
+  margin-left: 14px;
+  margin-right: 0;
+  width: 10px;
+  height: 10px;
+  background-image: url(../images/svg/icon-button_arrow.svg);
+  background-size: contain;
+  background-repeat: no-repeat;
+}
+
+.button-manufacture:hover {
   cursor: pointer;
   background: #ecebeb;
 }
 
-.bottom-arrow {
-  margin-left: 14px;
+.manufacture-list-item {
+  margin-right: 50px;
 }
 
-.manufacture-list-item {
-  margin-top: 40px;
-  margin-left: 20px;
-  margin-right: 70px;
+.manufacture-list-item:not(:last-child) {
+  margin-bottom: 38px;
 }
 
 .manufacture-list-item::before {
@@ -276,11 +370,14 @@ li {
 }
 
 .manufacture-item-num {
+  display: inline-block;
+  width: 98px;
+  height: 56px;
   font-family: Titan One;
   font-style: normal;
   font-weight: 400;
   font-size: 36px;
-  line-height: 1.13;
+  line-height: 1.138;
   letter-spacing: 0.04em;
   text-transform: uppercase;
   color: #d41443;
@@ -293,6 +390,17 @@ li {
   font-size: 12px;
   line-height: 1.66;
   color: #000000;
+}
+
+.manufacture-gallery {
+  text-align: center;
+  padding-bottom: 80px;
+}
+
+.gallery-desk {
+  display: inline-block;
+  width: 364px;
+  height: auto;
 }
 
 .slider-title {
