додає та приховує заголовк

--- a/src/partials/team.html
+++ b/src/partials/team.html
@@ -2,6 +2,7 @@
 
     
         <div class="sl">
+            <h2 class="visually-hidden">Customer feedback</h2>
             <div class="sl__slider">
                 <img
                     source srcset="./images/testimonuals/testimonials1.png 1x, 
