--- a/src/sass/layout/_recall.scss
+++ b/src/sass/layout/_recall.scss
@@ -1,3 +1,15 @@
+.visually-hidden {
+    position: absolute !important;
+    clip: rect(1px 1px 1px 1px);
+    clip: rect(1px, 1px, 1px, 1px);
+    padding: 0 !important;
+    border: 0 !important;
+    height: 1px !important;
+    width: 1px !important;
+    overflow: hidden;
+  }
+  
+
 .section_slider {
     background-color: $text-color-hero;
     // width: 100%;
