Добавляет подчеркивание текста, код скрипта слайдера и подключает скрипт с мейн, чинит отступы

--- a/src/partials/slider.html
+++ b/src/partials/slider.html
@@ -2,7 +2,7 @@
   <div class="container slider-container">
     <h2 class="section-title slider">Отзывы</h2>
     <ul class="list slider-list">
-      <li class="list-item slider_list-item">
+      <li class="list-item slider_list-item centered" firts-review>
         <img
           class="slider-photo"
           alt="Фото автора отзыва"
@@ -10,13 +10,15 @@
           srcset="./images/photo1_2x.png 2x, ./images/photo1_3x.png 3x"
         />
         <p class="slider-text">
-          Nullam viverra consectetuer. Quisque cursus et, porttitor risus.
-          Aliquam sem. In hendrerit nulla quam nunc, accumsan congue. Lorem
-          ipsum primis in nibh vel risus.
+          <span class="span-text">
+            Nullam viverra consectetuer. Quisque cursus et, porttitor risus.
+            Aliquam sem. In hendrerit nulla quam nunc, accumsan congue. Lorem
+            ipsum primis in nibh vel risus.
+          </span>
         </p>
         <p class="slider-address">Emily, Los Angeles</p>
       </li>
-      <li class="list-item slider_list-item right">
+      <li class="list-item slider_list-item right" second-review>
         <img
           class="slider-photo"
           alt="Фото автора отзыва"
@@ -24,13 +26,15 @@
           srcset="./images/photo2_2x.png 2x, ./images/photo2_3x.png 3x"
         />
         <p class="slider-text">
-          Nullam viverra consectetuer. Quisque cursus et, porttitor risus.
-          Aliquam sem. In hendrerit nulla quam nunc, accumsan congue. Lorem
-          ipsum primis in nibh vel risus.
+          <span class="span-text">
+            Nullam viverra consectetuer. Quisque cursus et, porttitor risus.
+            Aliquam sem. In hendrerit nulla quam nunc, accumsan congue. Lorem
+            ipsum primis in nibh vel risus.
+          </span>
         </p>
         <p class="slider-address">Jina, Los Angeles</p>
       </li>
-      <li class="list-item slider_list-item left">
+      <li class="list-item slider_list-item right" third-review>
         <img
           class="slider-photo"
           alt="Фото автора отзыва"
@@ -38,9 +42,11 @@
           srcset="./images/photo3_2x.png 2x, ./images/photo3_3x.png 3x"
         />
         <p class="slider-text">
-          Nullam viverra consectetuer. Quisque cursus et, porttitor risus.
-          Aliquam sem. In hendrerit nulla quam nunc, accumsan congue. Lorem
-          ipsum primis in nibh vel risus.
+          <span class="span-text">
+            Nullam viverra consectetuer. Quisque cursus et, porttitor risus.
+            Aliquam sem. In hendrerit nulla quam nunc, accumsan congue. Lorem
+            ipsum primis in nibh vel risus.
+          </span>
         </p>
         <p class="slider-address">Alex, Los Angeles</p>
       </li>
@@ -48,13 +54,17 @@
 
     <ul class="list slider-buttons">
       <li class="list-item slider-buttons_list-item">
-        <button type="button" class="slider-button active"></button>
+        <button
+          type="button"
+          class="slider-button active"
+          first-button
+        ></button>
       </li>
       <li class="list-item slider-buttons_list-item">
-        <button type="button" class="slider-button"></button>
+        <button type="button" class="slider-button" second-button></button>
       </li>
       <li class="list-item slider-buttons_list-item">
-        <button type="button" class="slider-button"></button>
+        <button type="button" class="slider-button" third-button></button>
       </li>
     </ul>
   </div>
