--- a/src/sass/layouts/_section-slider.scss
+++ b/src/sass/layouts/_section-slider.scss
@@ -48,6 +48,14 @@
   height: auto;
 
   margin-bottom: 29px;
+
+  @include for-size(tablet) {
+    margin-bottom: 19px;
+  }
+
+  @include for-size(desktop) {
+    margin-bottom: 15px;
+  }
 }
 
 .slider-text {
@@ -59,7 +67,7 @@
 
   text-align: center;
 
-  margin-bottom: 52px;
+  margin-bottom: 30px;
   padding-top: 43px;
   padding-bottom: 26px;
   padding-right: 60px;
@@ -95,7 +103,7 @@
     font-size: 14px;
     line-height: 2.16;
 
-    margin-bottom: 42px;
+    margin-bottom: 24px;
     padding-top: 47px;
     padding-bottom: 34px;
     padding-right: 80px;
@@ -106,7 +114,7 @@
     font-size: 16px;
     line-height: 1.86;
 
-    margin-bottom: 34px;
+    margin-bottom: 15px;
     padding-top: 47px;
     padding-bottom: 39px;
     padding-right: 88px;
@@ -114,11 +122,15 @@
   }
 }
 
+.span-text {
+  border-bottom: 1px solid #e1e1e1;
+}
+
 .slider-buttons {
   display: flex;
   justify-content: center;
 
-  padding-bottom: 86px;
+  margin-bottom: 170px;
 
   &_list-item {
     &:not(:last-child) {
@@ -160,6 +172,10 @@
     background-image: url('/images/icons/group_dots.svg');
 
     margin-bottom: 18px;
+
+    @include for-size(desktop) {
+      margin-bottom: 15px;
+    }
   }
 
   @include for-size(tablet) {
