изменила размер png под каждый медиа запрос

--- a/src/sass/layouts/_products.scss
+++ b/src/sass/layouts/_products.scss
@@ -203,13 +203,14 @@
       left: 16px;
 
       @media screen and (min-width: $tablet) {
+        width: 220px;
         top: -21%;
         left: 0%;
       }
 
       @media screen and (min-width: $desktop) {
-        left: 12%;
-        top: -30%;
+        width: 335px;
+        top: -40%;
       }
     }
 
