додає відступи від заголовку

--- a/src/sass/layout/_recall.scss
+++ b/src/sass/layout/_recall.scss
@@ -156,7 +156,7 @@
 
     .sl__name {
     margin-top: 18px;
-    
+    margin-bottom: 30px;
     font-family: DM Sans, sans-serif;
     font-style: normal;
     font-weight: 500;
@@ -167,6 +167,7 @@
     
     @media screen and (min-width: 768px) {
         margin-top: 14px;
+        margin-bottom: 35px;
         font-size: 16px;
     }
     
