стилі торг точок

--- a/src/sass/main.css
+++ b/src/sass/main.css
@@ -214,6 +214,7 @@ img {
 @media screen and (min-width: 768px) {
   .head-container {
     padding-top: 37px;
+    height: 399px;
   }
 }
 
@@ -590,6 +591,7 @@ img {
     -webkit-box-direction: normal;
         -ms-flex-direction: column;
             flex-direction: column;
+    margin-top: 19px;
   }
 }
 
@@ -624,7 +626,7 @@ img {
   width: 120px;
   padding: 0;
   margin: 0;
-  margin-top: 47px;
+  margin-top: 45px;
   margin-bottom: 7px;
   font-family: DM Sans;
   font-weight: 400;
@@ -689,7 +691,17 @@ img {
     flex-direction: column;*/
 }
 
+@media screen and (min-width: 1200px) {
+  .points {
+    width: 92x;
+    height: 76x;
+    padding-right: 18px;
+  }
+}
+
 .points-number {
+  position: relative;
+  z-index: 10;
   margin: 0;
   font-family: Titan One;
   font-size: 28px;
@@ -698,6 +710,25 @@ img {
   letter-spacing: 0.04em;
   text-transform: uppercase;
   color: #D41443;
+}
+
+.points-number::before {
+  content: '';
+  position: absolute;
+  top: -10%;
+  right: -10%;
+  z-index: -11;
+  width: 16px;
+  height: 16px;
+  background-color: #FFFFFF;
+  border-radius: 50%;
+}
+
+@media screen and (min-width: 1200px) {
+  .points-number::before {
+    width: 30x;
+    height: 30px;
+  }
 }
 
 @media screen and (min-width: 1200px) {
