--- a/src/sass/layout/_menu.scss
+++ b/src/sass/layout/_menu.scss
@@ -8,6 +8,8 @@
     background-color: $accent-color;
     @media screen  and (min-width:768px){
         padding-top: 37px;
+
+        height: 399px;
     }
 
     @media screen  and (min-width:1200px){
