--- a/src/sass/_shops.scss
+++ b/src/sass/_shops.scss
@@ -12,16 +12,15 @@
     screen and (-o-min-device-pixel-ratio: 2),
     screen and (min-resolution: 192dpi),
     screen and (min-resolution: 2dppx) {
-    .shops {
-      background-image: url(../images/footer-bg@x2.png);
-    }
-    @media screen and (min-width: 768px) {
-      padding-bottom: 158px;
-      height: 755px;
-    }
-    // @media screen and (min-width: 1200px) {
-    //   padding-bottom: 165px;
-    // }
+    background-image: url(../images/footer-bg@x2.png);
+  }
+  @media screen and (min-width: 768px) {
+    padding-bottom: 158px;
+    height: 755px;
+  }
+
+  @media screen and (min-width: 1200px) {
+    height: 800px;
   }
 }
 
@@ -287,8 +286,12 @@
 
 .shops-icon {
   margin-left: 10px;
+  fill: $accent-color;
 
   @media screen and (min-width: 768px) {
   }
   margin-left: 13px;
+}
+.shops-icon-white {
+  fill: $main-color;
 }
