--- a/src/sass/_modal.scss
+++ b/src/sass/_modal.scss
@@ -41,13 +41,16 @@
   cursor: pointer;
 
   &:hover,
-  &:focus {
-    color: $accent-color;
+  &:focus,
+  &:focus .modal-icon,
+  &:hover .modal-icon {
+    border-color: $accent-color;
+    fill: $accent-color;
   }
 }
 
 .modal-icon {
   width: 20px;
   height: 20px;
-  fill: black;
+  fill: $main-color;
 }
