--- a/src/partials/manufacture.html
+++ b/src/partials/manufacture.html
@@ -40,7 +40,7 @@
           Maecenas eleifend erat at justo fringilla.</p>
         <p class="manu__subtext">Curabitur lacinia enim at ex blandit, vel pellentesque odio elementum. Mauris rhoncus orci in
           imperdiet placerat.
-          Vestibulum euismod nisl suscipit ligula volutpat, a feugiat urna maximus. Cras massa nibh, tincidunt.
+          Vestibulum euismod ligula volutpat, a feugiat urna maximus. Cras massa nibh, tincidunt.<br><br>
         
           Aliquam erat volutpat. Aenean accumsan.</p>
 
