upd section products

--- a/src/sass/layout/_products.scss
+++ b/src/sass/layout/_products.scss
@@ -106,32 +106,22 @@
 .btn-circle {
   margin-bottom: 40px;
 }
-.img-ice-cream {
+.img-product {
   position: absolute;
   transform: translate(0, -50%);
   width: 250px;
   height: 250px;
-  background-image: url(../images/section2/home-pic1.png);
   background-size: cover;
   background-repeat: no-repeat;
+}
+.img-ice-cream {
+  background-image: url(../images/section2/home-pic1.png);
 }
 .img-ice-coffee {
-  position: absolute;
-  transform: translate(0, -50%);
-  width: 250px;
-  height: 250px;
   background-image: url(../images/section2/home-pic2.png);
-  background-size: cover;
-  background-repeat: no-repeat;
 }
 .img-milkshakes {
-  position: absolute;
-  transform: translate(0, -50%);
-  width: 250px;
-  height: 250px;
   background-image: url(../images/section2/home-pic3.png);
-  background-size: cover;
-  background-repeat: no-repeat;
 }
 
 @media screen and (min-width: 768px) {
