--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -1,7 +1,8 @@
 @import './utils/variables';
 @import './base/base';
 @import './components/btn';
-@import './layout/contacts';
 @import './layout/products';
+@import './layout/how-it`s-made';
 @import './layout/recall';
-@import './components/how-it`s-made';
+@import './layout/contacts';
+@import './layout/footer';
