--- a/src/sass/layout/_footer.scss
+++ b/src/sass/layout/_footer.scss
@@ -1,5 +1,5 @@
 footer {
-  background-color: #fff5f6;
+  background-color: $bg-color;
 }
 
 /* Забрала крапочки в cписку */
@@ -10,53 +10,90 @@ ul {
 }
 
 .footer-container {
-  display: flex;
-  justify-content: space-between;
+  display: block;
+
+  @media screen and (min-width: 768px) {
+    display: flex;
+    justify-content: space-between;
+  }
 }
 
 .text-block {
   display: block;
 
-  /* @media screen and (min-width: 320px) {
-    margin-left: 20px;
-  } */
+  @media screen and (min-width: 320px) {
+    margin-left: 7px;
+  }
 
-  margin-top: 114px;
-  margin-bottom: 97px;
-  margin-right: 420px;
-  margin-left: 114px;
+  @media screen and (min-width: 768px) and (max-width: 1199px) {
+    margin-left: 20px;
+    margin-right: 20px;
+
+    width: 340px;
+  }
+
+  @media screen and (min-width: 1200px) {
+    margin-bottom: 97px;
+    margin-left: 114px;
+  }
 }
 
 .footer-title {
-  color: #ffa5ba;
+  color: $background-hero;
   font-family: Titan One;
   font-style: normal;
   font-weight: normal;
-  font-size: 30px;
   line-height: 1.13;
-  letter-spacing: 0.04em;
   text-transform: uppercase;
 
   margin-bottom: 15px;
 
-  /* @media screen and (min-width: 320px) {
+  @media screen and (min-width: 320px) {
     font-size: 18px;
-    line-height: 1.17;
-    margin-left: 22px;
-    margin-right: 66px;
-  } */
+
+    margin-right: 51px;
+    margin-bottom: 17px;
+  }
+
+  @media screen and (min-width: 768px) {
+    font-size: 26px;
+    letter-spacing: 0.04em;
+  }
+
+  @media screen and (min-width: 1200px) {
+    font-size: 30px;
+    letter-spacing: 0.04em;
+  }
 }
 
 .footer-article {
   font-family: Titan One;
   font-style: normal;
   font-weight: normal;
-  font-size: 58px;
-  line-height: 66px;
-  letter-spacing: 0.06em;
+  line-height: 1.15;
   text-transform: uppercase;
+  color: $title-text-color;
 
-  color: #d41443;
+  @media screen and (min-width: 320px) {
+    font-size: 34px;
+    letter-spacing: 0.04em;
+
+    margin-right: 85px;
+    margin-left: 5px;
+    margin-bottom: 43px;
+  }
+
+  @media screen and (min-width: 768px) {
+    font-size: 48px;
+    letter-spacing: 0.06em;
+    margin-bottom: 90px;
+  }
+
+  @media screen and (min-width: 1200px) {
+    font-size: 58px;
+    letter-spacing: 0.06em;
+    margin-bottom: 0;
+  }
 }
 
 ul {
@@ -66,21 +103,33 @@ ul {
 .social-link-block {
   display: block;
 
-  margin-top: 114px;
-  margin-right: 114px;
+  @media screen and (min-width: 1200px) {
+    margin-right: 114px;
+  }
 }
 
 .social-link {
   display: flex;
   justify-content: flex-end;
+
+  @media screen and (min-width: 768px) {
+    margin-right: 20px;
+  }
 }
 
 .social-link-position {
   margin-right: 24px;
-  margin-bottom: 50px;
 
   justify-content: center;
   align-items: center;
+
+  @media screen and (min-width: 320px) {
+    margin-bottom: 46px;
+  }
+
+  @media screen and (min-width: 1220px) {
+    margin-bottom: 50px;
+  }
 }
 
 .social-link-position:last-child {
@@ -90,9 +139,9 @@ ul {
 .social-link .social-icon {
   display: flex;
 
-  background-color: #fea5bb;
+  background-color: $social-icon-color;
   border-radius: 50%;
-  fill: #ffffff;
+  fill: $text-color-hero;
 
   border: none;
 
@@ -107,7 +156,7 @@ ul {
 }
 
 .social-icon:hover {
-  background-color: #d41443;
+  background-color: $title-text-color;
 }
 
 .social-icons-svg {
@@ -118,18 +167,37 @@ ul {
 }
 
 .join {
-  display: inline-block;
   flex-wrap: nowrap;
 
   font-family: DM Sans;
   font-style: normal;
   font-weight: bold;
-  font-size: 16px;
-  line-height: 186%;
+  line-height: 1.86;
 
-  letter-spacing: 0.02em;
+  color: $primari-text-color;
 
-  color: #000000;
+  @media screen and (min-width: 320px) {
+    font-size: 12px;
+    line-height: 186%;
+
+    margin-left: 40px;
+    margin-bottom: 43px;
+  }
+
+  @media screen and (min-width: 768px) {
+    font-size: 14px;
+    line-height: 1.86;
+
+    margin-right: 20px;
+  }
+
+  @media screen and (min-width: 1200px) {
+    font-size: 16px;
+    line-height: 1.86;
+    letter-spacing: 0.02em;
+
+    margin-right: 20px;
+  }
 }
 
 a {
@@ -137,18 +205,30 @@ a {
 }
 
 .phone-number {
-  color: #d41443;
+  color: $title-text-color;
 }
 
 .rights-reserved {
   display: block;
-  border-top: 1px solid #e1e1e1;
+  border-top: 1px solid $border-slider;
 
-  height: 45px;
   width: 100%;
 
   align-items: center;
   text-align: center;
+
+  @media screen and (min-width: 320px) and (max-width: 767px) {
+    margin-bottom: 25px;
+    height: 90px;
+  }
+
+  @media screen and (min-width: 768px) {
+    height: 73px;
+  }
+
+  @media screen and (min-width: 1200px) {
+    height: 45px;
+  }
 }
 
 p {
@@ -160,12 +240,25 @@ p {
   font-style: normal;
   font-weight: bold;
   font-size: 14px;
-  line-height: 186%;
 
-  letter-spacing: 0.02em;
+  color: $text-color;
 
-  color: #907e82;
+  @media screen and (min-width: 320px) {
+    margin-left: 65px;
+    margin-right: 70px;
+    margin-top: 22px;
+    margin-bottom: 25px;
 
-  margin-top: 9px;
-  margin-bottom: 10px;
+    line-height: 1.52;
+  }
+
+  @media screen and (min-width: 1200px) {
+    margin-left: 65px;
+    margin-right: 70px;
+    margin-top: 9px;
+    margin-bottom: 10px;
+
+    line-height: 1.86;
+    letter-spacing: 0.02em;
+  }
 }
