Почти готово для 320
осталось размножить точки и сделать подчеркивание текста

--- a/src/partials/slider.html
+++ b/src/partials/slider.html
@@ -4,6 +4,7 @@
     <ul class="slider-list">
       <li class="slider-list-item girl-1">
         <h3 class="slider-list-text">
+          <div class="slider-list-text-nines"></div>
           Nullam viverra consectetuer. Quisque cursus et, porttitor risus.
           Aliquam sem. In hendrerit nulla quam nunc, accumsan congue. Lorem
           ipsum primis in nibh vel risus.
