--- a/src/sass/_slider.scss
+++ b/src/sass/_slider.scss
@@ -16,8 +16,6 @@
     align-items: center;
     content: '';
     height: 85px;
-    border-radius: 4px;
-    border: 1px solid transparent;
     margin-bottom: 29px;
     background-repeat: no-repeat;
     background-position: center;
@@ -45,16 +43,44 @@
 }
 
 .slider-list-text {
+  position: relative;
   color: rgba(0, 0, 0, 1);
   font-size: 12px;
   line-height: 2.55;
   text-align: center;
   background-color: #fafafa;
   padding: 43px 66px 26px 57px;
+  margin-bottom: 30px;
+  z-index: 1;
+}
+
+.slider-list-text-nines {
+  position: absolute;
+  width: 54px;
+  height: 40px;
+  top: 28px;
+  left: 61px;
+  background-image: url(../images/svg/slider99.svg);
+  background-repeat: no-repeat;
+  z-index: -1;
 }
 
 .slider-list-under {
   color: rgba(0, 0, 0, 1);
   text-align: center;
-  margin-top: 52px;
+  margin-top: 0px;
+
+  &::before {
+    background-image: url(../images/svg/slider-3dots.svg);
+    display: inline-flex;
+    width: 100%;
+    justify-content: center;
+    align-items: center;
+    content: '';
+    height: 4px;
+    margin-top: 0;
+    margin-bottom: 18px;
+    background-repeat: no-repeat;
+    background-position: top center;
+  }
 }
