--- a/src/sass/_hero.scss
+++ b/src/sass/_hero.scss
@@ -1,9 +1,15 @@
+%transition {
+  transition-duration: 250ms;
+  transition-property: all;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+}
+
 %btn {
   border-radius: 20px;
-  font-family: 'DM Sans';
+  font-family: "DM Sans";
   font-size: 8px;
   line-height: 10px;
-  display: flex;
+  display: inline-flex;
   align-items: center;
   justify-content: center;
   min-width: 62.4px;
@@ -27,24 +33,48 @@
   @extend %btn;
   background: $main-color;
   color: #d41443;
-
+  animation: animate110 3000ms infinite 2000ms;
   &:hover,
   &:focus {
     background: #ecebeb;
-    /*     border: 1px solid #d41443;
- */
     outline-color: transparent;
   }
 }
 
+@keyframes animate110 {
+  0% {
+    transform: scale(1);
+  }
+  50% {
+    transform: scale(1.1);
+  }
+  100% {
+    transform: scale(1);
+  }
+}
+
+@keyframes animate90 {
+  0% {
+    transform: scale(1);
+  }
+  50% {
+    transform: scale(0.85);
+  }
+  100% {
+    transform: scale(1);
+  }
+}
+// scale 1.1
 .hero-red-button {
   @extend %btn;
   margin-right: 8px;
   color: $main-color;
   background: $accent-color;
+  animation: animate90 3000ms infinite 2000ms;
 
   &:hover,
   &:focus {
+    transform: scale(1.1);
     background: $advanced-bg;
     color: $accent-color;
     /*     border: 1px solid $accent-color;
@@ -55,6 +85,7 @@
 .hero {
   background-color: $main-bg;
   height: 502px;
+  position: relative;
   @media screen and (max-width: 480px) {
     background-image: url(../images/mobile/ellipse_hero.png);
     background-repeat: no-repeat;
@@ -72,14 +103,17 @@
 .hero-container {
   position: relative;
   height: 100%;
-  /*     width: 100%; */
-
   margin: 0 auto;
-  @media screen and (max-width: 767px) {
+  background-size: 171px 410px, 346px 344px;
+  background-image: url(../images/mobile/icecreame_hero.png);
+  background-repeat: no-repeat;
+  background-position: 90% 100%;
+
+  @media screen and (min-width: 480px) and (max-width: 767px) {
     background-size: 171px 410px, 346px 344px;
-    background-image: url(../images/mobile/icecreame_hero.png);
+    background-image: url(../images/mobile/icecreame_hero.png), url(../images/tablet/ellipse_hero.png);
     background-repeat: no-repeat;
-    background-position: 90% 100%;
+    background-position: 90% 100%, 130% 45%;
   }
   @media screen and (min-device-pixel-ratio: 2),
     screen and (-webkit-min-device-pixel-ratio: 2),
@@ -87,19 +121,17 @@
     screen and (min-resolution: 192dpi),
     screen and (min-resolution: 2dppx) {
     .hero-container {
-      background-image: url(../images/mobile/icecreame_hero@x2.png),
-        url(../images/mobile/ellipse_hero@x2.png);
+      background-image: url(../images/mobile/icecreame_hero@x2.png), url(../images/mobile/ellipse_hero@x2.png);
     }
   }
 
-  @media screen and (min-width: 481px) {
+  /*   @media screen and (min-width: 481px) {
     background-repeat: no-repeat;
 
-    background-image: url(../images/tablet/icecreame_hero.png),
-      url(../images/tablet/ellipse_hero.png);
+    background-image: url(../images/tablet/icecreame_hero.png), url(../images/tablet/ellipse_hero.png);
     background-size: 143px 336px, 324px;
     background-position: 70% 100%, 100% 70%;
-  }
+  } */
 
   @media screen and (min-width: 480px) {
     @media screen and (min-device-pixel-ratio: 2),
@@ -108,22 +140,21 @@
       screen and (min-resolution: 192dpi),
       screen and (min-resolution: 2dppx) {
       .hero-container {
-        background-image: url(../images/tablet/hero-girl@x2.png),
-          url(../images/tablet/icecreame_hero@x2.png),
-          url(../images/tablet/ellipse_hero@x2.png),
-          url(../images/tablet/bidon-moloka@x2.png);
+        background-image: url(../images/tablet/hero-girl@x2.png), url(../images/tablet/icecreame_hero@x2.png),
+          url(../images/tablet/ellipse_hero@x2.png), url(../images/tablet/bidon-moloka@x2.png);
       }
     }
   }
   @media screen and (min-width: 768px) {
     background-repeat: no-repeat;
 
-    background-image: url(../images/tablet/hero-girl.png),
-      url(../images/tablet/icecreame_hero.png),
-      url(../images/tablet/ellipse_hero.png),
-      url(../images/tablet/bidon-moloka.png);
-    background-size: 168px 133px, 143px 336px, 324px 322px, 124px 126px;
-    background-position: 95% 100%, 61% 100%, 70% 40%, 5% 93%;
+    background-image: /* url(../images/tablet/hero-girl.png), */
+      /*  url(../images/tablet/icecreame_hero.png),
+      url(../images/tablet/ellipse_hero.png), */ url(../images/tablet/bidon-moloka.png);
+    background-size: /* 168px 133px,  *//*  143px 336px, 324px 322px */
+      124px 126px;
+    background-position: /* 95% 100%,  *//*  61% 100%, 70% 40% */
+      5% 93%;
   }
 
   @media screen and (min-width: 768px) {
@@ -133,22 +164,19 @@
       screen and (min-resolution: 192dpi),
       screen and (min-resolution: 2dppx) {
       .hero-container {
-        background-image: url(../images/tablet/hero-girl@x2.png),
-          url(../images/tablet/icecreame_hero@x2.png),
-          url(../images/tablet/ellipse_hero@x2.png),
-          url(../images/tablet/bidon-moloka@x2.png);
+        background-image: /* url(../images/tablet/hero-girl@x2.png), url(../images/tablet/icecreame_hero@x2.png),
+          url(../images/tablet/ellipse_hero@x2.png),  */ url(../images/tablet/bidon-moloka@x2.png);
       }
     }
   }
   @media screen and (min-width: 1200px) {
     min-width: 1200px;
     margin: 0 auto;
-    background-size: 293px 232px, 236px 557px, 538px 538px, 188px 191px;
-    background-image: url(../images/hero-girl.png),
-      url(../images/icecreame_hero.png), url(../images/ellipse_hero.png),
-      url(../images/bidon-moloka.png);
+    background-size: /* 293px 232px, */ /*  236px 557px, 538px 538px, */ 188px 191px;
+    background-image: /* url(../images/hero-girl.png), */
+      /*  url(../images/icecreame_hero.png), url(../images/ellipse_hero.png), */ url(../images/bidon-moloka.png);
     background-repeat: no-repeat, no-repeat, no-repeat, no-repeat;
-    background-position: 90% 100%, 60% 100%, 63% 34%, 3% 92%;
+    background-position: /* 90% 100%, */ /* 60% 100%, 63% 34%,  */ 3% 92%;
   }
   @media screen and (min-width: 1200px) {
     @media screen and (min-device-pixel-ratio: 2),
@@ -157,9 +185,8 @@
       screen and (min-resolution: 192dpi),
       screen and (min-resolution: 2dppx) {
       .hero-container {
-        background-image: url(../images/hero-girl@x2.png),
-          url(../images/icecreame_hero@x2.png),
-          url(../images/ellipse_hero@x2.png), url(../images/bidon-moloka@x2.png);
+        background-image: /* url(../images/hero-girl@x2.png), url(../images/icecreame_hero@x2.png),
+          url(../images/ellipse_hero@x2.png), */ url(../images/bidon-moloka@x2.png);
       }
     }
   }
@@ -181,14 +208,14 @@
     width: 162px;
   }
   @media screen and (min-width: 1200px) {
-    padding-top: 171px;
+    padding-top: 141px;
     width: 277px;
   }
 }
 
 .hero-title-text {
   display: inline-block;
-  font-family: 'Titan One';
+  font-family: "Titan One";
   font-style: 400;
   font-weight: normal;
   font-size: 26px;
@@ -249,7 +276,7 @@
     width: 124px;
     height: 48px;
 
-    font-family: 'DM Sans';
+    font-family: "DM Sans";
     font-size: 8px;
     line-height: 1.5;
   }
@@ -272,7 +299,7 @@
   width: 20px;
   height: 20px;
   margin-top: 8px;
-  fill: $accent-color;
+  color: $accent-color;
   border-radius: 50%;
 
   border: 1px solid transparent;
@@ -286,13 +313,14 @@
   &:hover,
   &:focus {
     background-color: $accent-color;
-    fill: $main-color;
+    color: $main-color;
     border: 1px solid transparent;
   }
 }
 
 .hero-count {
   display: none;
+  position: relative;
 
   @media screen and (min-width: 768px) {
     display: block;
@@ -321,7 +349,7 @@
   @media screen and (min-width: 768px) {
     position: relative;
     display: block;
-    font-family: 'Titan One';
+    font-family: "Titan One";
     font-size: 28px;
     line-height: 1.1429;
     text-align: right;
@@ -340,7 +368,7 @@
   @media screen and (min-width: 768px) {
     position: relative;
     display: block;
-    font-family: 'Titan One';
+    font-family: "Titan One";
     font-size: 28px;
     line-height: 1.1429;
     text-align: right;
@@ -360,7 +388,7 @@
   @media screen and (min-width: 768px) {
     display: block;
     text-transform: lowercase;
-    font-family: 'DM Sans';
+    font-family: "DM Sans";
     font-size: 8px;
     line-height: 1.25;
     text-align: right;
@@ -376,7 +404,7 @@
   display: none;
 
   @media screen and (min-width: 768px) {
-    content: '';
+    content: "";
     display: block;
     position: absolute;
     top: 0;
@@ -391,7 +419,7 @@
   }
 
   @media screen and (min-width: 1200px) {
-    content: '';
+    content: "";
     display: block;
     position: absolute;
     top: 0;
@@ -403,5 +431,210 @@
     background-color: #ffffff;
     border: 0;
     border-radius: 50%;
+  }
+}
+
+.hero-icecream-container {
+  display: none;
+  @media screen and (min-width: 768px) {
+    display: block;
+    position: absolute;
+    top: 63px;
+    right: 247px;
+
+    width: 143px;
+    height: 336px;
+    z-index: 1;
+  }
+  @media screen and (min-width: 1200px) {
+    display: block;
+    position: absolute;
+    top: 108px;
+    right: 450px;
+
+    width: 236px;
+    height: 557px;
+    z-index: 1;
+  }
+}
+
+.hero-girl-container {
+  display: none;
+  @media screen and (min-width: 768px) {
+    display: block;
+    position: absolute;
+    bottom: 0px;
+    right: 34px;
+
+    width: 168px;
+    height: 133px;
+    z-index: 3;
+  }
+  @media screen and (min-width: 1200px) {
+    display: block;
+    position: absolute;
+    bottom: 0px;
+    right: 89px;
+
+    width: 293px;
+    height: 232px;
+    z-index: 3;
+  }
+}
+
+.hero-img::after {
+  display: none;
+
+  background-color: #ffa5ba;
+  animation-name: pink-circle;
+  animation-duration: 2.5s, 2.5s;
+  animation-timing-function: linear;
+  animation-iteration-count: 10;
+  animation-direction: alternate;
+  animation-delay: 0.5s;
+
+  @media screen and (min-width: 768px) and (max-width: 1199px) {
+    display: block;
+    content: "";
+    position: absolute;
+
+    left: 80px;
+    bottom: 46px;
+    transform: translateX(-48%);
+
+    width: 322px;
+    height: 322px;
+    border-radius: 50%;
+    background-color: $advanced-bg;
+    z-index: -1;
+
+    background-color: #ffa5ba;
+    animation-name: pink-circle;
+    animation-duration: 2s;
+    animation-timing-function: linear;
+    animation-iteration-count: 3;
+    animation-direction: alternate;
+    animation-delay: 0.5s;
+  }
+  @media screen and (min-width: 1200px) {
+    display: block;
+    content: "";
+    position: absolute;
+
+    left: -106px;
+    top: -25px;
+
+    width: 538px;
+    height: 538px;
+    border-radius: 50%;
+    background-color: $advanced-bg;
+    z-index: -1;
+  }
+}
+
+@keyframes pink-circle {
+  0% {
+    background-color: $advanced-bg;
+    opacity: 0.8;
+  }
+
+  25% {
+    background-color: #fa8fa8;
+    opacity: 0.8;
+  }
+
+  50% {
+    background-color: #f37290;
+    opacity: 1;
+  }
+
+  75% {
+    background-color: #f34a74;
+    opacity: 0.5;
+  }
+
+  100% {
+    background-color: $advanced-bg;
+    opacity: 0.8;
+  }
+}
+
+/* @keyframes pink-circle {
+  0% {
+    background-image: radial-gradient(circle at center, #e03f5b, #e03f5b, #fb5277, #fb5277, #ffa5ba, #ffa5ba, #ffa5ba);
+  }
+  12% {
+    background-image: radial-gradient(circle at center, #e03f5b, #e03f5b, #fb5277, #fb5277, #ffa5ba, #ffa5ba, #ffa5ba);
+  }
+  25% {
+    background-image: radial-gradient(
+      circle at center,
+      #e03f5b,
+      #fb5277,
+      #fb5277,
+      #fb5277,
+      #ffa5ba,
+      #ffa5ba,
+      #ffa5ba,
+      #ffa5ba
+    );
+  }
+
+  50% {
+    background-image: radial-gradient(
+      circle at center,
+      #fb5277,
+      #fb5277,
+      #fb5277,
+      #ffa5ba,
+      #ffa5ba,
+      #ffa5ba,
+      #ffa5ba,
+      #ffa5ba,
+      #ffa5ba
+    );
+    border-radius: 45%;
+  }
+
+  75% {
+    background-image: radial-gradient(circle at center, #fb5277, #fb5277, #ffa5ba, #ffa5ba, #ffa5ba, #ffa5ba);
+  }
+
+  100% {
+    background-image: radial-gradient(circle at center, #fb5277, #ffa5ba);
+  }
+} */
+
+.hero-top-button {
+  @media screen and (max-width: 767px) {
+    display: none;
+  }
+  @media screen and (min-width: 768px) {
+    display: block;
+    position: absolute;
+    bottom: 10px;
+    right: 10px;
+    opacity: 0.5;
+    display: inline-flex;
+    align-items: center;
+    justify-content: center;
+    width: 20px;
+    height: 20px;
+    margin-top: 8px;
+    color: $accent-color;
+    border-radius: 50%;
+    border: 1px solid transparent;
+    background-color: $main-color;
+  }
+  @media screen and (min-width: 1200px) {
+    margin-top: 20px;
+  }
+
+  &:hover,
+  &:focus {
+    opacity: 1;
+    background-color: $accent-color;
+    color: $main-color;
+    border: 1px solid transparent;
   }
 }
